Fix color-box vertical alignment

--- a/client/app/components/color-box.less
+++ b/client/app/components/color-box.less
@@ -1,4 +1,7 @@
 color-box {
+  height: 16px !important;
+  display: inline-block !important;
+  overflow: hidden !important;
   span {
     width: 12px !important;
     height: 12px !important;
